--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "newrelic": "^4.1.0"
+    "newrelic": "^4.1.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
